[gd_scene load_steps=7 format=3 uid="uid://b8mig6v27jy1e"]

[ext_resource type="Script" path="res://Game/main.gd" id="1_3wfpr"]
[ext_resource type="PackedScene" uid="uid://dmobjppe0au82" path="res://Game/action_manager.tscn" id="2_2dwvk"]
[ext_resource type="Texture2D" uid="uid://5cm01rqyggx" path="res://Sprites/Background.png" id="2_7vbtx"]
[ext_resource type="PackedScene" uid="uid://dninmsshc4cw6" path="res://Game/map_manager.tscn" id="2_lifqi"]
[ext_resource type="PackedScene" uid="uid://bp0f7d383gpyy" path="res://Audio/audio_manager.tscn" id="2_qgc0n"]
[ext_resource type="PackedScene" uid="uid://vdva3l6py1bc" path="res://Game/ui.tscn" id="3_s5qw3"]

[node name="Main" type="Node"]
script = ExtResource("1_3wfpr")

[node name="MapManager" parent="." instance=ExtResource("2_lifqi")]

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_7vbtx")
centered = false

[node name="ActionManager" parent="." instance=ExtResource("2_2dwvk")]

[node name="ShopInventory" parent="ActionManager" index="0"]
y_sort_enabled = true

[node name="ShopStand" parent="ActionManager/ShopInventory" index="0"]
visible = false
position = Vector2(30, 46)

[node name="InventorySlot" parent="ActionManager/ShopInventory" index="1"]
visible = true
z_index = 2
position = Vector2(8, 156)

[node name="Player" parent="ActionManager" index="1"]
y_sort_enabled = true
position = Vector2(40, 123)

[node name="UI" parent="." instance=ExtResource("3_s5qw3")]
z_index = 5

[node name="NegotiateScreen" parent="UI" index="0"]
visible = false

[node name="AudioManager" parent="." instance=ExtResource("2_qgc0n")]

[connection signal="set_up_done" from="MapManager" to="ActionManager/ShopInventory" method="_on_map_manager_set_up_done"]

[editable path="ActionManager"]
[editable path="ActionManager/ShopInventory"]
[editable path="ActionManager/NPCManager"]
[editable path="UI"]
